--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -11,8 +11,8 @@
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+  <PropertyGroup>
+    <Version>0.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup>
