--- a/Template.DesktopApp/Properties/launchSettings.json
+++ b/Template.DesktopApp/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "AvaloniaApp": {
+    "DesktopApp": {
       "commandName": "Project",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
