--- a/Template.DesktopApp/Template.DesktopApp.csproj
+++ b/Template.DesktopApp/Template.DesktopApp.csproj
@@ -39,7 +39,7 @@
     </PackageReference>
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.8" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.8" />
-    <PackageReference Include="Avalonia.LinuxFramebuffer" Version="11.2.8" />
+    <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.2.7.3" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
     <PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
