--- a/Template.DesktopApp/Template.DesktopApp.csproj
+++ b/Template.DesktopApp/Template.DesktopApp.csproj
@@ -34,16 +34,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.2.8" />
-    <PackageReference Include="Avalonia.Desktop" Version="11.2.8" />
+    <PackageReference Include="Avalonia" Version="11.3.0" />
+    <PackageReference Include="Avalonia.Desktop" Version="11.3.0" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-    <PackageReference Include="Avalonia.Diagnostics" Version="11.2.8">
+    <PackageReference Include="Avalonia.Diagnostics" Version="11.3.0">
       <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.8" />
-    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.8" />
-    <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.2.7.3" />
+    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.0" />
+    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.0" />
+    <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.3.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
     <PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
@@ -54,9 +54,8 @@
     <PackageReference Include="System.Interactive" Version="6.0.1" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     <PackageReference Include="System.Reactive" Version="6.0.1" />
-    <PackageReference Include="Usa.Smart.Avalonia" Version="1.0.0" />
-    <PackageReference Include="Usa.Smart.Avalonia.Behaviors" Version="1.0.0" />
-    <PackageReference Include="Usa.Smart.Avalonia.Reactive" Version="1.0.0" />
+    <PackageReference Include="Usa.Smart.Avalonia" Version="2.0.0" />
+    <PackageReference Include="Usa.Smart.Avalonia.Extensions" Version="2.0.0" />
     <PackageReference Include="Usa.Smart.Core" Version="2.4.1" />
     <PackageReference Include="Usa.Smart.Navigation" Version="2.11.0" />
     <PackageReference Include="Usa.Smart.Navigation.Avalonia" Version="2.11.0" />
