--- a/Template.DesktopApp/Template.DesktopApp.csproj
+++ b/Template.DesktopApp/Template.DesktopApp.csproj
@@ -43,7 +43,6 @@
     </PackageReference>
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.0" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.0" />
-    <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.3.0.4" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
     <PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
@@ -54,10 +53,10 @@
     <PackageReference Include="System.Interactive" Version="6.0.1" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     <PackageReference Include="System.Reactive" Version="6.0.1" />
-    <PackageReference Include="Usa.Smart.Avalonia" Version="2.5.2" />
-    <PackageReference Include="Usa.Smart.Avalonia.Extensions" Version="2.5.2" />
+    <PackageReference Include="Usa.Smart.Avalonia" Version="2.6.0" />
+    <PackageReference Include="Usa.Smart.Avalonia.Extensions" Version="2.6.0" />
     <PackageReference Include="Usa.Smart.Core" Version="2.4.2" />
-    <PackageReference Include="Usa.Smart.Mvvm" Version="1.5.0" />
+    <PackageReference Include="Usa.Smart.Mvvm" Version="1.6.0" />
     <PackageReference Include="Usa.Smart.Navigation" Version="2.12.0" />
     <PackageReference Include="Usa.Smart.Navigation.Avalonia" Version="2.12.0" />
     <PackageReference Include="Usa.Smart.Navigation.Extensions.DependencyInjection" Version="2.12.0" />
@@ -66,6 +65,7 @@
     <PackageReference Include="Usa.Smart.Resolver" Version="2.6.1" />
     <PackageReference Include="Usa.Smart.Resolver.Extensions.Configuration" Version="2.6.1" />
     <PackageReference Include="Usa.Smart.Resolver.Extensions.DependencyInjection" Version="2.6.1" />
+    <PackageReference Include="Xaml.Behaviors.Avalonia" Version="11.3.0.7" />
   </ItemGroup>
 
   <ItemGroup>
